# C-ProjectWithGTestAndCMakeTemplate

./: .gitignore  CMakeLists.txt  keywords.csv
lib/: custom_exceptions.h  get_keywords.h  hash_keywords.h  lexer.h  parser.h  syntax_analysis.h
reshTestFiles/: lexterTest1.re
src/: check_if_keywords_changed.cpp  get_keywords.cpp  lexer.cpp  main.cpp  parser.cpp  syntax_analysis.cpp
tests/: lexer-test.cpp
